pod-to-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ok
  namespace: dev
  labels:
    app: allowed-to-prod
spec:
  containers:
  - name: test
    image: przemekmalak/tools
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
