sidecar-permit-to-prod.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: permit-to-prod
  namespace: dev
spec:
  egress:
  - hosts:
    - "./*"
    - "prod/app.prod.svc.cluster.local"
    - "istio-system/*"
  workloadSelector:
    labels:
      app: allowed-to-prod
